--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
           work correctly both with client-side routing and a non-root public URL.
           Learn how to configure a non-root public URL by running `npm run build`.
         -->
-    <title>Vitão Redes</title>
+    <title>CTO Manager</title>
   </head>
   <body>
     <noscript> Ative JavaScript para rodar essa aplicação. </noscript>
